EDSC-1362: More z-index fixes to correct failing portal tests

--- a/app/assets/stylesheets/modules/toolbar.css.scss
+++ b/app/assets/stylesheets/modules/toolbar.css.scss
@@ -36,7 +36,7 @@
 
 .leaflet-top.leaflet-right {
   top: 80px;
-  z-index: 110;
+  z-index: 100;
 }
 
 .leaflet-bar.projection-switcher a {
